--- a/src/sass/custom.scss
+++ b/src/sass/custom.scss
@@ -1,11 +1,9 @@
 // Bootstrap partials
 @import "bootstrap/bootstrap/variables";
-// @import "bootstrap/mixins";
 
 @import "compass";
 
-@import "custom/variables";
-@import "custom/mixins";
+@import "variables";
 
 @import "custom/generic";
 
