--- a/src/sass/vendor.scss
+++ b/src/sass/vendor.scss
@@ -1,6 +1,5 @@
 // Modified values
-@import "custom/variables";
+@import "variables";
 
-$input-border-focus: $brand-primary;
 @import "bootstrap/bootstrap";
 @import "font-awesome";
