--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,13 +1,14 @@
+/*!
+ * Custom CSS for HE2 Indiegogo campaign
+ * Copyright 2016 NeoArt Labs LLC
+ */
+.container {
+  max-width: 640px;
+}
+
 .title {
   font-size: 24px;
   font-weight: bold;
-}
-
-.section {
-  color: #000;
-  font-size: 16px;
-  font-weight: bold;
-  margin: 5px 0 0;
 }
 
 #videos {
