--- a/src/jade/includes/index/fact_sheet.jade
+++ b/src/jade/includes/index/fact_sheet.jade
@@ -1,53 +1,65 @@
-h1 Facts
-.fact-table
-  span.fact-title Title
-  span.fact-desc Hacker Experience 2
+h1 Factsheet
 
-  span.fact-title Genres
-  ul.fact-desc 
+.fact
+  .title: strong Title
+  .description Hacker Experience 2
+
+.fact
+  .title: strong Genres
+  .description: ul
     li MMO real-time strategy
     li Hacking simulation
     li Virtual open world
     li Indie game
 
-  span.fact-title Developer
-  span.fact-desc: a(href="https://neoartlabs.com") Neoart Labs
+.fact
+  .title: strong Developer
+  .description: a(href="https://neoartlabs.com") Neoart Labs
 
-  span.fact-title Release date (expected)
-  span.fact-desc December 2016
+.fact
+  .title
+    strong Release date 
+    small (expected)
+  .description December 2016
 
-  span.fact-title Platforms
-  ul.fact-desc 
+.fact
+  .title: strong Platforms
+  .description: ul
     li Windows, Mac, Linux
     li Web Browser, Steam
     li iOS, Android, WP
 
-  span.fact-title Early-bird price
-  span.fact-desc From $10 one-off
+.fact
+  .title: strong Early-bird price
+  .description From $10 one-off
 
-  span.fact-title Final price
-  span.fact-desc $30 one-off or $5/month
+.fact
+  .title: strong Final price
+  .description $30 one-off or $5/month
 
-  span.fact-title Relevant links
-  ul.fact-desc 
+.fact
+  .title: strong Relevant links
+  .description: ul
     li: a(href="https://hackerexperience.com.br") Game website
     li: a(href="#") Crowdfunding
     li: a(href="https://letsbuildagame.org") Let's build a game
-      
-  span.fact-title Social
-  span.fact-desc.fact-social
-    a(href="https://facebook.com/HackerExperience")
+
+.fact
+  .title: strong Social
+  .description: ul.buttons
+    li: a(href="https://facebook.com/HackerExperience")
       i.fa.fa-facebook-square.fa-2x
-    a(href="https://twitter.com/HackerExp")
+    li: a(href="https://twitter.com/HackerExp")
       i.fa.fa-twitter.fa-2x
-    a(href="https://reddit.com/r/HackerExperience")
+    li: a(href="https://reddit.com/r/HackerExperience")
       i.fa.fa-reddit-alien.fa-2x
-    a(href="https://google.com/+HackerExperience")
+    li: a(href="https://google.com/+HackerExperience")
       i.fa.fa-google-plus.fa-2x
 
-  span.fact-title Contact
-  span.fact-desc.fact-social
-    a(href="mailto:contact@hackerexperience")
+.fact
+  .title: strong Contact
+  .description: ul.buttons
+    li: a(href="mailto:contact@hackerexperience")
       i.fa.fa-envelope.fa-2x
-    a(href="tel:18444225953")
+    li: a(href="tel:18444225953")
       i.fa.fa-phone.fa-2x
