--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -12,3 +12,9 @@ $link-color: $cooltrast;
 
 $font-family-sans-serif: "Open Sans", "Helvetica",  sans-serif;
 $font-family-base: $font-family-sans-serif;
+
+$font-size-base: 16px;
+
+$font-size-h1: floor(($font-size-base * 2.15));
+$font-size-h2: $font-size-h1;
+$font-size-h3: floor(($font-size-base * 1.5));
